--- a/templates/base/panel_izquierdo.html
+++ b/templates/base/panel_izquierdo.html
@@ -135,7 +135,7 @@
                 </a>
               </li>
                 <li class="nav-item">
-                <a href="#" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                <a href="{% url 'reporte_zona' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-book-reader nav-icon"></i>
                   <p>Reporte de Zonas</p>
                 </a>
