--- a/templates/base/panel_izquierdo.html
+++ b/templates/base/panel_izquierdo.html
@@ -123,15 +123,15 @@
             </a>
             <ul class="nav nav-treeview">
               <li class="nav-item">
-                <a href="#" class="nav-link active" style="background-color: darkgoldenrod; color:black">
+                <a href="{% url 'reporte_especie' %}" class="nav-link active" style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-book nav-icon"></i>
                   <p>Reporte de Especies</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link active"  style="background-color: darkgoldenrod; color:black">
+                <a href="{% url 'reporte_usuario' %}" class="nav-link active"  style="background-color: darkgoldenrod; color:black">
                   <i class="fas fa-book-open nav-icon"></i>
-                  <p>Reporte de Visitas</p>
+                  <p>Reporte de Usuarios</p>
                 </a>
               </li>
                 <li class="nav-item">
