--- a/flora/templates/mostrar_especie.html
+++ b/flora/templates/mostrar_especie.html
@@ -99,7 +99,7 @@
                                                         </td>
                                                         <td>
 
-                                                            <input type="button"  class="btn btn-success btn-block" value="Mapa" onclick="javascript:window.open('{{a.Longitud}}','','width=900,height=900,left=100,top=100,toolbar=yes');"/>
+                                                            <input type="button"  class="btn btn-success btn-block" value="Mapa" onclick="javascript:window.open('{{a.Localizacion}}','','width=900,height=900,left=100,top=100,toolbar=yes');"/>
                                                         </td>
                                                             <td>
                                                                 <p>
